--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <meta name="description" content="Hi! I'm Wildan Hidayatullah, i build stuff for the world wide web." />
     <meta property="og:site_name" content="Wildan Hidayatullah" />
@@ -21,8 +20,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="style/index.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -33,38 +30,6 @@
         gtag('js', new Date());
         gtag('config', 'G-HPXPMVH5QM');
     </script>
-
-    <noscript>
-        <style>
-            body {
-                overflow: auto !important;
-            }
-
-            body:after {
-                display: none !important;
-            }
-
-            #main>.inner {
-                opacity: 1.0 !important;
-            }
-
-            #main {
-                opacity: 1.0 !important;
-                -moz-transform: none !important;
-                -webkit-transform: none !important;
-                -ms-transform: none !important;
-                transform: none !important;
-                -moz-transition: none !important;
-                -webkit-transition: none !important;
-                -ms-transition: none !important;
-                transition: none !important;
-                -moz-filter: none !important;
-                -webkit-filter: none !important;
-                -ms-filter: none !important;
-                filter: none !important;
-            }
-        </style>
-    </noscript>
 </head>
 
 <body class="is-loading">
@@ -141,6 +106,7 @@
             </div>
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/23753737e8.js" crossorigin="anonymous"></script>
     <script src="script/index.js"></script>
 </body>
 
