--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://github.com/wildan-hidayatullah">
-                                            <i class="fab fa-github"></i>
-                                            <span class="label">Github</span>
+                                        <a href="https://unsplash.com/@wildanhidayatullah">
+                                            <i class="fab fa-unsplash"></i>
+                                            <span class="label">Unsplash</span>
                                         </a>
                                     </li>
                                     <li>
